force-app/main/default/objects/DocumentoChecklist__c/DocumentoChecklist__c.object-meta.xml
<CustomObject>
    <label>Documento da Checklist</label>
    <nameField>
        <label>Nome do Documento da Checklist</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos da Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>