force-app/main/default/objects/DocumentoChecklist__c/fields/JustificativaDeReprovacao__c.field-meta.xml
<CustomField>
    <fullName>JustificativaDeReprovacao__c</fullName>
    <label>Justificativa de reprovação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>