force-app/main/default/objects/DocumentoChecklist__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>